This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
8/23/19: Added property to enable restoring stage and Y position after each
tilt in eucentricity routines.

8/23/19: Improved defect correction of more than 4 lines to reduce structure
in corrected patch; added defect correction of K2/K3 images if there are any
bad line or pixel entries in properties.

8/21/19: Changed montage pre-cooking with ability to skip every other column,
set a dwell time when skipping pieces, and change the stage speed.

8/21/19: Set default for program memory limit.

8/21/19: Added script commands to move to the last hole center done by
MultipleRecords with either stage or image shift.

8/21/19: Added script command to set additional parameters for frame tilt
series: backlash for dose-symmetric, a tilt speed setting, and stage position
to restore after tilt.

8/21/19: Fixed loss of View defocus from image buffer.

8/15/19: Fixed crash reading piece from montage map after canceling opening a
new montage, broken 7/15.

8/14/19: Added option to multi-shot dialog to do early return on all but first
shot.

8/14/19: Added script commands to close log and save log to file.

8/14/19: SEM_3-7-8
8/14/19: Fixed enabling of buttons in Tilt Control on JEOL, broken 7/28
(In 3.7).

8/12/19: Prevented a deferred sum from being made on multiple Record shots
with early return when aligning in plugin is selected (In 3.7).

8/12/19: Fixed crashes when doing unidirectional after dose-symmetric series,
and doing dose-symmetric series with fewer angles than previous one.

8/12/19: Fixed using toolbar buttons to run or edit scripts above 20 and the
menu entries for running those scripts.

8/1/19: SEM_3-7-7
8/1/19: Fixed orientation of K3 binned gain reference written by SEMCCD