@@ -2667,6 +2667,18 @@
             aligning to a single map, as decribed for &#39;RealignToNavItem&#39;.</TD>
         </TR>
         <TR vAlign="top">
+          <TD class="auto-style1">RealignToMapDrawnOn #i #r</TD>
+          <TD>Center on the specified item by first realigning to the map that the item was drawn
+              on, then using image shift to center on the marked item.&nbsp;  The specified item
+              must have been drawn on a higher-magnification map that can be aligned to in two rounds
+              using some lower mignification map, such as an anchor map.  For #i, enter 0 for
+              the current item or the item being acquired; an index greater than 0 for the item with
+              that index in the table; or a value less than 0 to count back from the end of the 
+              table, where -1 is the last item.  For #r, enter 1 to restore the microscope state
+              to the current state after the procedure, or 0 not to.
+          </TD>
+        </TR>
+        <TR vAlign="top">
           <TD class="auto-style1">ForceCenterRealign</TD>
           <TD>Makes Realign to Item align to the map center instead of skipping the first
             round because it was aligned to recently</TD>
@@ -2774,6 +2786,14 @@
             otherwise just like ItemIndexWithLabel.</TD>
         </TR>
         <TR vAlign="top">
+          <TD class="auto-style1">NavIndexItemDrawnOn #</TD>
+          <TD>Report the Navigator index of the map that the specified item was drawn on, 
+              or 0 if it was not drawn on a map.  For #, enter 0 for
+              the current item or the item being acquired; an index greater than 0 for the item with
+              that index in the table; or a value less than 0 to count back from the end of the 
+              table, where -1 is the last item.</TD>
+        </TR>
+        <TR vAlign="top">
           <TD class="auto-style1">SetNavRegistration #</TD>
           <TD>Set the current registration of the Navigator window to the given number.&nbsp; 
             No item registration values are changed.</TD>
@@ -2875,6 +2895,18 @@
             filename including the path in ReportedValue1, the extension (including the dot) in 
             ReportedValue2, the path only in ReportedValue3, and the rest of the rootname 
             in ReportedValue4.&nbsp; No optional assignment to variable.</TD>
+        </TR>
+        <TR vAlign="top">
+          <TD class="auto-style1">SetMapAcquireState #</TD>
+          <TD>Sets the state with which the specified map item was acquired.&nbsp; For #, 
+              enter 0 for the current item or the item being acquired; an index greater than 0 
+              for the item with that index in the table; or a value less than 0 to count back 
+              from the end of the table, where -1 is the last item.</TD>
+        </TR>
+        <TR vAlign="top">
+          <TD class="auto-style1">RestoreState</TD>
+          <TD>Restore the state if one has been saved with either with 'SetMapAcquireState' or 
+              the <A HREF="hidd_statedlg.htm">Imaging States dialog</A>. </TD>
         </TR>
       </TABLE>
       <BR>
